Inserted partners code, changed relevant parts to fit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,20 @@ set(ALGO lib/algo/Solver.h
         lib/algo/CacheManager.h
         lib/algo/MapCacheManager.h
         lib/algo/solvers/StringReverser.h lib/algo/solvers/StringReverser.cpp
-        lib/algo/maze_domain/Maze.h lib/algo/maze_domain/Maze.cpp lib/algo/maze_domain/Cell.h lib/algo/maze_domain/MazeParser.cpp lib/algo/maze_domain/MazeParser.h)
+        lib/algo/maze_domain/Maze.h lib/algo/maze_domain/Maze.cpp lib/algo/maze_domain/Cell.h
+        lib/algo/maze_domain/MazeParser.cpp lib/algo/maze_domain/MazeParser.h
+
+        lib/algo/search/State.h
+        lib/algo/search/Searcher.h lib/algo/search/Searchable.h
+        lib/algo/search/Problem.h lib/algo/search/Problem.cpp lib/algo/search/Solution.h
+        lib/algo/search/SearcherAdapter.h
+        lib/algo/search/Coordinate.h
+        lib/algo/search/AStar.h lib/algo/search/AStar.cpp
+        lib/algo/search/BestFirstSearch.h lib/algo/search/BestFirstSearch.cpp
+        lib/algo/search/BreadthFirstSearch.h lib/algo/search/BreadthFirstSearch.cpp
+        lib/algo/search/DepthFirstSearch.h lib/algo/search/DepthFirstSearch.cpp
+
+        lib/algo/search/ProblemParser.cpp lib/algo/search/ProblemParser.h)
 
 set(UTIL lib/util/Util.h lib/util/Util.cpp)
 
